--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>template</title>
+		<title>Learn Login Form 2</title>
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
