--- a/index.html
+++ b/index.html
@@ -3,8 +3,33 @@
 	<head>
 		<title>Learn Login Form 2</title>
 		<link rel="stylesheet" href="css/style.css">
+		<link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
 	</head>
 	<body>
-		
+	<div class="container">
+			<form class="login-form" method="POST">
+				<div class="header">
+					<h1>Sign In</h1>
+					<ul class="social-list">
+						<li class="social-item fb">
+							<a href="#"></a>
+						</li>
+						<li class="social-item twitter">
+							<a href="#"></a>
+						</li>
+						<li class="social-item google">
+							<a href="#"></a>
+						</li>
+					</ul>
+				</div>
+				<div class="main">
+  				</div>
+  				<div class="footer">
+  					
+
+
+  				</div>
+			</form>
+		</div>	
 	</body>
 </html>
