Add main and footer

--- a/index.html
+++ b/index.html
@@ -23,11 +23,12 @@
 					</ul>
 				</div>
 				<div class="main">
+  					<input name="email" type="email" class="email" placeholder="Email Address">
+  					<input name="password" type="password" class="password" placeholder="Password">
+  					<button class="login">Login into Your Account</button>
   				</div>
   				<div class="footer">
-  					
-
-
+  					New Here? <a href="">Sign up</a>
   				</div>
 			</form>
 		</div>	
